@@ -11,6 +11,7 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
 	- Only report out of order entries when sorting files once per file
 	- make pop syslog ./configure setting report itself like the rest of the choices
 	- Make error messages more consistant (P/O checking Jonathan's bug report)
+        - Do not allow delete of catchall address within account. (Who suggested this?)
 
         Bill Shupp
 	- enable-onchange-script defaults to no.  
